--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peterson Sena - PortFolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="descarga.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
 <body>
+    <div class="download">
+        
+    </div>
     <div class="window" id="cvWindow">
+        
         <div class="title-bar">
             <div class="title-bar-text">Peterson Sena</div>
             <div class="title-bar-controls">
@@ -85,7 +90,22 @@
                         <div class="bootcamp-grid">
 
                             <div class="study-item">
+                                <div class="study-summary">Boot Camp Full Stack PHP</div>
+                                <div class="studycenter">IT Academy Barcelona Activa</div>
+                                <div class="study-date">03/23 - 09/2023</div>
+                                <div class="study-skills">
+                                    <p><strong>Habilidades aprendidas:</strong></p>
+                                    <ul>
+                                        <li>PHP, Laravel, MySQL</li>
+                                        <li>HTML, CSS</li>
+                                        <li>Git, XAMPP</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="study-item">
                                 <div class="study-summary">Curso de Desarrollo Web - Platzi</div>
+                                <div class="studycenter">IT Academy Barcelona Activa</div>
+
                                 <div class="study-date">2021</div>
                                 <div class="study-skills">
                                     <p><strong>Habilidades aprendidas:</strong></p>
@@ -98,18 +118,8 @@
                             </div>
                             <div class="study-item">
                                 <div class="study-summary">Curso de Desarrollo Web - Platzi</div>
-                                <div class="study-date">2021</div>
-                                <div class="study-skills">
-                                    <p><strong>Habilidades aprendidas:</strong></p>
-                                    <ul>
-                                        <li>HTML, CSS, JavaScript</li>
-                                        <li>Responsive Design</li>
-                                        <li>Version Control (Git)</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="study-item">
-                                <div class="study-summary">Curso de Desarrollo Web - Platzi</div>
+                                <div class="studycenter">IT Academy Barcelona Activa</div>
+
                                 <div class="study-date">2021</div>
                                 <div class="study-skills">
                                     <p><strong>Habilidades aprendidas:</strong></p>
@@ -221,6 +231,7 @@
         </div>
         <div class="taskbar-time">
             <span id="taskbarClock">12:00 AM</span>
+            <span id="taskbarVolume"><img src="https://win98icons.alexmeub.com/icons/png/loudspeaker_rays-0.png" alt=""></span>
         </div>
     </footer>
 
