modify and refactor about me, photo, buttons y icons

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                 <div id="skills" class="section" style="display: none;">
                     <h2>Skills</h2>
                     <nav class="submenu">
-                        <button onclick="showSubsectionSkills('softskills')">Softskills</button>
-                        <button onclick="showSubsectionSkills('languages')">Lenguajes</button>
+<!--                         <button onclick="showSubsectionSkills('softskills')">Softskills</button>
+ -->                        <button onclick="showSubsectionSkills('languages')">Lenguajes</button>
                       
                         <button onclick="showSubsectionSkills('frameworks')">Frameworks</button>
                         <button onclick="showSubsectionSkills('databases')">BBDD</button>
